--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,75 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
+
+/* base styles */
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Quicksand";
+  color: #333;
+}
+.navbar {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  max-width: 600px;
+  margin: 0 auto;
+  border-bottom: 1px solid #f2f2f2;
+}
+.navbar h1 {
+  color: #f1356d;
+  text-transform: uppercase;
+  -webkit-transition: 0.3s;
+  text-shadow: 1px 3px 5px #e993ad48;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar .links {
+  margin-left: auto;
+}
+.navbar a {
+  margin-left: 16px;
+  text-decoration: none;
+  padding: 6px 10px;
+  -webkit-transition: 0.3s;
+}
+.navbar a:hover {
+  color: #f1356d;
+  background-color: #f5b8ca2a;
+  border-radius: 8px;
+  box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.1);
+}
+.content {
+  max-width: 600px;
+  margin: 40px auto;
+  padding: 20px;
+}
+
+/*  blog previews / list */
+.blog-preview {
+  padding: 10px;
+  margin: 20px auto;
+  border-bottom: 2px solid #f2f2f2;
+  -webkit-transition: 0.3s;
+}
+.blog-preview:hover {
+  border-radius: 10px;
+  padding: 10px;
+  background-color: rgba(204, 204, 197, 0.185);
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+}
+.blog-preview h2 {
+  font-size: 20px;
+  color: #f1356d;
+  margin-bottom: 8px;
+}
+.delBtn {
+  padding: 7px;
+  margin-top: 5px;
+  border: none;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.1);
+}
+.delBtn:hover {
+  padding: 7px;
+  margin-top: 5px;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.1);
+  /* box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.1); */
 }
