--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   font-family: "Quicksand";
   color: #333;
 }
+
 .navbar {
   padding: 20px;
   display: flex;
@@ -72,4 +73,62 @@
   border: none;
   background-color: rgba(0, 0, 0, 0.1);
   /* box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.1); */
+}
+
+.blog-preview a {
+  text-decoration: none;
+}
+
+/* blog details page */
+.blog-details h2 {
+  font-size: 20px;
+  color: #f1356d;
+  margin-bottom: 10px;
+}
+.blog-details div {
+  margin: 20px auto;
+}
+/* .blog-details button {
+  background-color: #f1356d;
+  border: #fff;
+  border: 0;
+} */
+
+/* create new blog form */
+.create {
+  max-width: 400px;
+  margin: 0 auto;
+  text-align: center;
+}
+.create label {
+  text-align: left;
+  display: block;
+}
+.create h2 {
+  font-size/: 20px;
+  color: #f1356d;
+  margin-bottom: 30px;
+}
+.create input,
+.create textarea,
+.create select {
+  width: 100%;
+  padding: 6px 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  box-sizing: border-box; /* IMPORTANT NOTE  */
+  display: block;
+  outline: none;
+}
+.create button {
+  background: #f1356d;
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+}
+.create button:hover {
+  background-color: #ca2556;
 }
