--- a/src/index.css
+++ b/src/index.css
@@ -112,7 +112,7 @@ body {
   display: block;
 }
 .create h2 {
-  font-size/: 20px;
+  font-size: 20px;
   color: #f1356d;
   margin-bottom: 30px;
 }
